replace gc aligner code with calls to static join aligner methods